--- a/Pep3/Frontend/Dockerfile
+++ b/Pep3/Frontend/Dockerfile
@@ -3,12 +3,15 @@ FROM node:18-alpine AS builder
 
 WORKDIR /app
 
+# Install build dependencies
+RUN apk add --no-cache python3 make g++
+
 # Copy package files
 COPY package*.json ./
 COPY bun.lockb ./
 
 # Install dependencies
-RUN npm ci --only=production
+RUN npm ci
 
 # Copy source code
 COPY . .
@@ -18,6 +21,9 @@ RUN npm run build
 
 # Production stage
 FROM nginx:stable-alpine
+
+# Install curl for health checks
+RUN apk add --no-cache curl
 
 # Copy built application
 COPY --from=builder /app/dist /usr/share/nginx/html
