--- a/Pep3/LAB-TBD/Dockerfile
+++ b/Pep3/LAB-TBD/Dockerfile
@@ -1,5 +1,5 @@
 # Build stage
-FROM maven:3.9.4-openjdk-17 AS builder
+FROM maven:3.9.4-jdk-17 AS builder
 
 WORKDIR /app
 
@@ -14,14 +14,14 @@ COPY src ./src
 RUN mvn clean package -DskipTests
 
 # Production stage
-FROM openjdk:17-jre-alpine
+FROM openjdk:17-jre-slim
 
 # Install curl for health checks
-RUN apk add --no-cache curl
+RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
 
 # Create app user
-RUN addgroup -g 1001 -S appgroup && \
-    adduser -u 1001 -S appuser -G appgroup
+RUN groupadd -g 1001 appgroup && \
+    useradd -u 1001 -g appgroup -s /bin/bash appuser
 
 WORKDIR /app
 
